# ChangeLog for net-fs/samba
# Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/samba/ChangeLog,v 1.136 2004/12/17 08:57:27 satya Exp $

*samba-3.0.9-r1 (17 Dec 2004)

  17 Dec 2004; Christian Andreetta <satya@gentoo.org>
  +files/samba-3.0.9-util.c-bitpmap.c-4120.patch, +samba-3.0.9-r1.ebuild:
  bug #73943: CAN-2004-1154: Integer overflow for samba 2.x, 3.x<=3.0.9

  29 Nov 2004; Christian Andreetta <satya@gentoo.org> samba-3.0.9.ebuild:
  more masked archs added

  23 Nov 2004; Christian Andreetta <satya@gentoo.org> samba-3.0.8-r1.ebuild,
  samba-3.0.9.ebuild:
  old private config saved in pkg_setup (no more post_install: bug #72235)

  21 Nov 2004; Jason Wever <weeve@gentoo.org> samba-3.0.9.ebuild:
  Added ~sparc keyword as it was not carried over in the version bump.

*samba-3.0.9 (20 Nov 2004)

  20 Nov 2004; Christian Andreetta <satya@gentoo.org> samba-3.0.8-r1.ebuild,
  +samba-3.0.9.ebuild:
  version bump: smbldap-0.8.5-3 (bug #71728) and samba-3.0.9

  18 Nov 2004; Christian Andreetta <satya@gentoo.org> samba-3.0.8-r1.ebuild,
  samba-3.0.8.ebuild:
  bug #71334: automatically copy of old privatedir to new location

*samba-3.0.8-r1 (15 Nov 2004)

  15 Nov 2004; Christian Andreetta <satya@gentoo.org> +samba-3.0.8-r1.ebuild:
  bug #71223: win9x/Me lanman printing. bug #70628: 3.0.8 docs upstream
  permission error

  13 Nov 2004; Christian Andreetta <satya@gentoo.org>
  files/samba-3.0.x-python-setup.patch:
  samba-3.0.x-python-setup.patch update (bug #69034)

  10 Nov 2004; Olivier Crete <tester@gentoo.org> samba-3.0.8.ebuild:
  Stable on x86 see 70429

  10 Nov 2004; Joshua Kinard <kumba@gentoo.org> samba-3.0.8.ebuild:
  Marked stable on mips.

  10 Nov 2004; Bryan Østergaard <kloeri@gentoo.org> samba-3.0.8.ebuild:
  Stable on alpha, bug 70429.

  09 Nov 2004; Gustavo Zacarias <gustavoz@gentoo.org> samba-3.0.8.ebuild:
  Stable on sparc wrt #70429
