@@ -1,0 +1,3 @@
+MD5 b19fd86d3c11a1b43f75a5988cd9ceeb samba-3.0.10.tar.gz 15176926
+MD5 5f173d549014985d681478897135915b samba-vscan-0.3.5.tar.bz2 161982
+MD5 63abfa7c522c8fb37e1d2e2fb9d422ab smbldap-tools-0.8.5-3.tgz 275520
