@@ -1,6 +1,11 @@
 # ChangeLog for net-fs/samba
 # Copyright 2002-2004 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/samba/ChangeLog,v 1.136 2004/12/17 08:57:27 satya Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/net-fs/cvs-repo/gentoo-x86/net-fs/samba/ChangeLog,v 1.137 2004/12/17 15:27:23 satya Exp $
+
+*samba-3.0.10 (17 Dec 2004)
+
+  17 Dec 2004; Christian Andreetta <satya@gentoo.org> +samba-3.0.10.ebuild:
+  version bump
 
 *samba-3.0.9-r1 (17 Dec 2004)
 
